To do

   o    Origin of NaN's in bounded examples. Can they be avoided?

   o    Weighted least squares, especially in nlxb.

   o    Issue when npar = 1

Changes in nlmrt version 2013-7.9

   o    Added control list elements to .Rd files for nlxb and nlfb, 
        with reference in wrapnls.

   o    Put in a test for very small sum of squares in nlfb and nlxb.

Changes in nlmrt version 2013-3.16

   o    Result element coeffs changed to coefficients. 
        This alters wrapnls.R code also.

Changes in nlmrt version 2012-9.03

   o    More features in summary().

Changes in nlmrt version 2012-9.03

   o    summary() for output from different functions.
        Should display constraints if possible as per JNMWS codes.
        Warnings / Notes fixed re: dependencies in vignette, methods.

   o    Sort out display in vignette
        Note warning "unstated dependencies in vignette"

Changes in nlmrt version 2012-8.12

   o    Bounds and masks examples in nlmrt-vignette.

Changes in nlmrt version 2012-8.04
   o    Vignette nlmrt-vignette updated.

   o    Functions to convert expression to residual, Jacobian,
        sum of squares and gradient functions (for use with optimx
        or nlmrt:nlfb or minpack.lm:nls.lm

   o    The examples in ./inst/examples/ are calling routines that
        have been renamed. These have, I believe, been fixed.

   o    nlfb() needs an explicit Jacobian function and needs a way
        to compute numerical Jacobian if omitted. Fixed, I believe.

Changes in nlmrt version 2012-6.01

   o    Removed diagnostic printout of bdmsk in nlfb

Changes in nlmrt version 2012-4.15 
	   
   o	Added nlfb to allow functions for residual and Jacobian.
        These are developed from the expression for the residuals as
	a model in nlxb. 

   o	Bounds now in wrapnls.

   o	Note misleading trace output in nls() runs with bounds.
